# Starling

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
benchmarks/: bench.py
notebooks/: 01_single_scan.ipynb  02_batch_recipe_guide.md  03_analysis_walkthrough.ipynb  compare_darfix.ipynb
scripts/: check_rasterization.py  compare_darfix.py
starling/: __init__.py  device.py  preprocess.py  viz.py
starling/batch/: __init__.py  cli.py  recipe.py  runner.py
starling/io/: __init__.py  _bundle.py  _dataset.py  _geometry.py  _metadata.py  _mpread.py  _nexus.py  _output.py  _partial.py  _reader.py
starling/properties/: __init__.py  _curvefit.py  _diagnostics.py  _gaussnewton.py  _init_guess.py  _linalg.py  _maps.py  _models.py  _moments.py  _refit.py  _results.py  _solve.py  _strain.py  _style.py
starling/transforms/: __init__.py  _kam.py
tests/: test_acquisition_mode.py  test_analyze_dispatch.py  test_backward_compat_diffry.py  test_bundle.py  test_compare_darfix.py  test_edge_refit.py  test_fit_nd.py  test_fit_nd_two.py  test_fit_status.py  test_fit_status_ma7031.py  test_fit_synthetic.py  test_geometry.py  test_golden_real_scan.py  test_higher_moments.py  test_hot_pixels.py  test_loading_parallel.py  test_maps_strain_kam.py  test_masking_preview.py  test_nexus.py  test_orientation_stamp.py  test_parity_gauss1d.py  test_parity_moments.py  test_pixel_inspector.py  test_preprocess_threshold.py  test_pseudovoigt.py  test_rasterization.py  test_recipe.py  test_stacked_load.py  test_standalone.py
