[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "starling"
version = "0.1.0"
description = "GPU-accelerated DFXM analysis for ESRF ID03 BLISS data (PyTorch backend)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "numpy",
    "h5py",
    "hdf5plugin",
    "pyyaml",
    "tqdm",
    "psutil",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "colorstamps"]
viz = ["matplotlib", "colorstamps", "ipywidgets", "ipympl"]

[tool.pytest.ini_options]
markers = [
    "slow: heavy local validation tests (large real datasets)",
]

[project.scripts]
starling = "starling.batch.cli:main"

[tool.setuptools.packages.find]
include = ["starling*"]
